--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Navbar exercise</title>
+	<link rel="stylesheet" type="text/css" href="navigation.css">
 </head>
 <body>
 	<nav class="navbar">
 		<ul class="navbar__ul">
-			<a href="#"><li>Home</li></a>
-			<a href="#"><li>Products</li></a>
-			<a href="#"><li>About us</li></a>
+			<a href="#" class="navbar__ul__a"><li class="navbar__ul__li">Home</li></a>
+			<a href="#" class="navbar__ul__a"><li class="navbar__ul__li">Products</li></a>
+			<a href="#" class="navbar__ul__a"><li class="navbar__ul__li">About us</li></a>
 		</ul>
 	</nav>
 </body>
